--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -34,10 +34,9 @@ body {
 
 /*----------Header----------*/
 .header {
-	/*background: url(../src/bc.jpg);
+	background: url(../src/bc.jpg);
 	background-size: cover;
-	background-attachment: fixed;*/
-	background-color: #557EBB;
+	background-attachment: fixed;
 	min-height: 400px;
 }
 
@@ -50,73 +49,35 @@ body {
 
 /*----------Main----------*/
 .main {
-	padding-top: 0;
-	background-color: #C47745;
+	background: #C47745;
+	min-height: 400px;
+	text-align: center;
 }
 
-.main .container {
-	padding-top: 30px;
+.main .container .row .col-md-4,
+.main .container .row .col-md-8 {
+	border: 1px solid #fff;
 }
 
-.main .overflow {
-	overflow: hidden;
+.main .container h1 {
+	margin: 0;
+	padding: 30px;
+	font-size: 50px;
+	color: #fff;
 }
 
-.main img {
-	min-height: 100%;
-	max-height: 100%;
-	width: 100%;
+.main .container p {
+	font-size: 30px;
+	color: #fff;
 }
-
-.main #cont1,
-.main #cont2,
-.main #cont3 {
-	position: relative;
-	display: inline-block;
-	padding: 0;
-}
-
-.main #cont1 {
-	margin: 10px 2px 10px 10px;
-	width: 560px;
-	height: 331px;
-	float: left;
-	clear: none;
-}
-
-.main #cont2 {
-	margin: 10px 10px 5px 0;
-	width: 380px;
-	height: 159px;
-	float: right;
-}
-
-.main #cont3 {
-	margin: 5px 10px 10px 0;
-	width: 380px;
-	height: 159px;
-	float: right;
-	clear: right;
-}
-
-.main h1 {
-	position: absolute;
-	top: 250px;
-	left: 50px;
-	width: 100%;
-	color: #FFA266;
-	text-shadow: 3px 2px #000;
-}
-
 
 /*----------Ticket----------*/
 .ticket {
-	background-color: #557EBB;
 	margin: 0;
 	padding: 10px 0;
-	/*background: url(../src/bc2.jpg) center no-repeat;
+	background: url(../src/bc2.jpg) center no-repeat;
 	background-size: cover;
-	background-attachment: fixed;*/
+	background-attachment: fixed;
 }
 
 .ticket .container {
@@ -167,7 +128,7 @@ body {
 
 /*----------Display----------*/
 .display {
-	background: #C47745;
+	background-color: #557EBB;
 }
 
 .display .container {
@@ -189,15 +150,29 @@ body {
   animation: 30s slidy infinite; 
 }
 
+/*----------About----------*/
+.about {
+	background: #C47745;
+	min-height: 400px;
+	text-align: center;
+}
 
+.about .container h1 {
+	margin: 0;
+	padding: 30px;
+	font-size: 50px;
+	color: #fff;
+}
+
+.about .container p {
+	font-size: 30px;
+	color: #fff;
+}
 /*----------Rooms----------*/
 .rooms {
 	min-height: 400px;
 	background-color: #557EBB;
 	padding: 10px 0;
-	/*background: url(../src/space.jpg) center no-repeat;
-	background-size: cover;
-	background-attachment: fixed;*/
 }
 
 .rooms .room {
