--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -42,19 +42,19 @@ body {
 
 .header img {
 	display: block;
-	max-height: 200px;
+	max-height: 300px;
 	margin: 0 auto;
 }
 
 /*----------Navigation----------*/
-.navigation {
-    height: 100px;
-    background-color: #C47745;
+.nav {
+    height: 50px;
+    background-color: #555659;
 }
 
 /*----------Main----------*/
 .main {
-	background: url(../src/eichenwalde.png);
+	background: url(../src/eichenwalde.jpg);
 	height: 1080px;
 	text-align: center;
 }
@@ -97,6 +97,81 @@ body {
     border-right: 8px solid #555659;
 }
 
+/*----------Nav-Display----------*/
+
+#nav-display .container {
+	margin: 10px auto 0 auto;
+	width: 970px;
+}
+
+#nav-display .container .row .col-centered {
+	margin: 0 auto;
+}
+
+#nav-display .container .row .col-centered .btn {
+	display: block;
+	margin: 0 auto;
+	float: none;
+}
+
+#nav-display .container .row .col-centered ul {
+	margin: 10px auto;
+	display: block;
+	float: none;
+	width: 185px;
+}
+
+#nav-display .container .row .col-centered ul li {
+	margin: 0 8px;
+	list-style-type: none;
+	display: inline-block;
+}
+
+#nav-display .container .row .col-centered ul li:hover {
+	cursor: pointer;
+}
+
+#nav-display .indicator {
+	display: block;
+	height: 15px;
+	width: 15px;
+	border-radius: 50%;
+	background-color: rgba(255,255,255,0.2);
+	border: 1px solid #FFFFFF;
+}
+
+#nav-display .active {
+	background-color: #FFFFFF;
+}
+/*----------Display----------*/
+.display {
+	background-color: #557EBB;
+	position: relative;
+}
+
+.display .container {
+	padding: 0;
+	overflow: hidden;
+	height: 400px;
+	width: 970px;
+}
+
+.display .container .slides {
+	display: inline-block;
+	height: 100%;
+	width: 5820px;
+	list-style-type: none;
+}
+
+.display .container .slides .slide {
+	float: left;
+	width: 970px;
+}
+
+.display .container .slides .slide img {
+	max-width: 970px;
+}
+
 /*----------Ticket----------*/
 .ticket {
 	margin: 0;
@@ -108,13 +183,8 @@ body {
 
 .ticket .container {
 	padding-top: 10px;
-	border-top: 3px #FFF solid;
-	border-bottom: 3px #FFF solid;
-}
-
-.ticket .container * {
-	margin: 0;
-	padding: 0;
+	border-top: 3px #FFFFFF solid;
+	border-bottom: 3px #FFFFFF solid;
 }
 
 .ticket .container img {
@@ -151,31 +221,6 @@ body {
 	border-bottom: 3px #FFA266 solid;
 }
 
-
-/*----------Display----------*/
-.display {
-	background-color: #557EBB;
-}
-
-.display .container {
-	overflow: hidden;
-}
-
-.display .container figure img {
-	width: 20%; 
-	float: left;
-}
-
-.display .container figure {
-  position: relative;
-  width: 500%;
-  margin: 0;
-  left: 0;
-  text-align: left;
-  font-size: 0;
-  animation: 30s slidy infinite; 
-}
-
 /*----------About----------*/
 .about {
 	background: #C47745;
@@ -197,7 +242,6 @@ body {
 }
 /*----------Rooms----------*/
 .rooms {
-	min-height: 700px;
 	background: url(../src/bc.jpg);
 	background-size: cover;
 	background-attachment: fixed;
@@ -205,11 +249,10 @@ body {
 }
 
 .rooms .container {
-    width: 90%;
+    width: 80%;
 }
 
 .rooms .room {
-    min-height: 400px;
 	margin: 10px 0 50px 0;
 	width: 100%;
 	background-color: rgba(255,255,255,0.8);
@@ -218,7 +261,6 @@ body {
 
 .rooms .room .imug {
 	width: 100%;
-	height: 720px;
 	overflow: hidden;
 }
 
@@ -276,7 +318,7 @@ body {
 	margin-top: -70px;
 	height: 70px;
 	clear: both;
-	padding: 0;
+	padding: 0 0 100px 0;
 	background-color: #000;
 }
 
@@ -313,18 +355,6 @@ body {
 	display: inline-block;
 	float: right;
 	color: #fff;
-}
-
-@keyframes slidy {
-0% { left: 0%; }
-20% { left: 0%; }
-25% { left: -100%; }
-45% { left: -100%; }
-50% { left: -200%; }
-70% { left: -200%; }
-75% { left: -300%; }
-95% { left: -300%; }
-100% { left: -400%; }
 }
 
 @font-face {
