--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -32,11 +32,14 @@ html, body {
 	background: url(../src/bc.jpg);
 	background-size: cover;
 	background-attachment: fixed;
-	min-height: 400px;
+}
+
+.header .container {
+	padding: 50px 0;
+	width: 70%;
 }
 
 .header img {
-	display: block;
 	max-height: 300px;
 	margin: 0 auto;
 }
@@ -44,7 +47,7 @@ html, body {
 /*----------Navigation----------*/
 .nav {
     height: 50px;
-    background-color: #555659;
+    background-color: rgba(85,86,89,0.5);
 }
 
 /*----------Main----------*/
@@ -61,9 +64,13 @@ html, body {
     background-color: rgba(255,255,255,0.4);
 }
 
+.main .container {
+	width: 70%;
+}
+
 .main .container .row p,
 .main .container .row a {
-	font-size: 40px;
+	font-size: 2.5em;
     overflow: visible;
 }
 
@@ -81,12 +88,12 @@ html, body {
     color: #555659;
 }
 
-.main .container .row .col-md-4 {
+.main .container .row .col-xs-4 {
     border-left: 8px solid #555659;
     text-align: right;
 }
 
-.main .container .row .col-md-8 {
+.main .container .row .col-xs-8 {
     margin-top: 200px;
     text-align: right;
     border-right: 8px solid #555659;
@@ -202,6 +209,7 @@ html, body {
 }
 
 .ticket .container {
+	width: 70%;
 	padding-top: 10px;
 	border-top: 3px #FFFFFF solid;
 	border-bottom: 3px #FFFFFF solid;
@@ -249,6 +257,10 @@ html, body {
     padding: 200px 0;
 }
 
+.about .container {
+	width: 70%;
+}
+
 .about .container h1 {
 	margin: 0;
 	padding: 30px;
@@ -269,7 +281,7 @@ html, body {
 }
 
 .rooms .container {
-    width: 80%;
+    width: 70%;
 }
 
 .rooms .room {
@@ -328,10 +340,6 @@ html, body {
 	list-style-type: none;
 }
 
-#cs {
-	margin-top: -150px;
-}
-
 /*----------Footer----------*/
 .footer {
 	position: relative;
@@ -340,6 +348,10 @@ html, body {
 	clear: both;
 	padding: 0 0 100px 0;
 	background-color: #000;
+}
+
+.footer .container {
+	width: 70%;
 }
 
 .footer .container *{
